// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:inline_kbd > basic 1`] = `
"<div class="paragraph">
<p><kbd>F11</kbd></p>
</div>"
`;

exports[`DocTest:inline_kbd > keyseq 1`] = `
"<div class="paragraph">
<p><span class="keyseq"><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>N</kbd></span></p>
</div>"
`;
